feat: edit payment request API
